      (closes the other half of #441722)

  [ Rafael Laboissiere ]
  * debian/in/PACKAGE.menu: Adapted to the new menu hierarchy, which will
    be in the next release of Policy
  * debian/rules: Increased the update-alternatives priority of octave2.9
    to 90 and keep that of octave2.1 at 80
  * debian/in/control:
    + octave*-emacsen package depends on newer emacs22
    + Added Homepage field
  * debian/in/PACKAGE-htmldoc.doc-base.faq: Reference the correct HTML
    files of the FAQ
  * debian/rules: Patch the examples/octave.desktop.in file, such that the
    referenced command exists

 -- Thomas Weber <thomas.weber.mail@gmail.com>  Sat, 22 Sep 2007 17:13:51 +0000

octave2.9 (1:2.9.13-1) unstable; urgency=low

  * New upstream release
  * debian/patches/01_use_suitesparse_for_ufsparse.dpatch,
    debian/patches/50_fix_pkg_rebuild.m.dpatch : Removed patches
    (applied upstream)

  * debian/octave.st: Added enscript highlighting rules for Octave
  * debian/in/PACKAGE.dirs: Added directory for enscript
  * debian/rules: Install octave.st

  * debian/in/control:
    + Removed the obsolete build-dependency on dejagnu (over two years
      ago, DejaGNU was replaced by the test/assert infrastructure for
      running the tests)
    + Use the substitution variable ${binary:Version} instead of the
      deprecated ${Source-Version}, which also makes the package
      binNMUable
  * debian/rules: Do not ignore make clean/distclean error

 -- Rafael Laboissiere <rafael@debian.org>  Mon, 23 Jul 2007 23:06:54 +0200

octave2.9 (1:2.9.12-2) unstable; urgency=low

  * debian/in/control, debian/rules:
    + Switch back to g77 from gfortran (closes: #427257).
      This has been discussed with the toolchain guys and is the easist
      solution for now, see
      http://lists.debian.org/debian-gcc/2007/06/msg00024.html
    + Switch to SuiteSparse from UFSparse.
  * New patch:
    01_use_suitesparse_for_ufsparse.dpatch
    SuiteSparse introduced a new type in 3.0, see