@@ -19,11 +19,14 @@ octave2.9 (1:2.9.14-1) unstable; urgency=low
     to 90 and keep that of octave2.1 at 80
   * debian/in/control:
     + octave*-emacsen package depends on newer emacs22
+    + Build-depends on desktop-file-utils
     + Added Homepage field
   * debian/in/PACKAGE-htmldoc.doc-base.faq: Reference the correct HTML
     files of the FAQ
-  * debian/rules: Patch the examples/octave.desktop.in file, such that the
-    referenced command exists
+  * debian/rules:
+    + Patch the examples/octave.desktop.in file, such that the referenced
+      command exists
+    + Rename the installed octave.desktop file
 
  -- Thomas Weber <thomas.weber.mail@gmail.com>  Sat, 22 Sep 2007 17:13:51 +0000
 
